# Quote-List

./: .gitignore  CMakeLists.txt  README.md
Quote List/: CMakeLists.txt  Quote List.cpp  Quote List.h
include/: BaseLibrary.hpp  Quote.hpp
include/QuotesHolding/: Cryptographer.hpp  QuotesLoader.hpp  QuotesSaver.hpp
include/UI/: Menu.hpp  MenuOption.hpp  MenuVariant.hpp
source/: BaseLibrary.cpp  Quote.cpp
source/QuotesHolding/: Cryptographer.cpp  QuotesLoader.cpp  QuotesSaver.cpp
source/UI/: Menu.cpp  MenuOption.cpp
